[gd_scene load_steps=2 format=3 uid="uid://cpst4mkvlp7nt"]

[ext_resource type="Script" uid="uid://cnr1fth8xkokq" path="res://Ranking.gd" id="1_7h2db"]

[node name="Ranking" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_7h2db")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="RankingList" type="BoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="BtnVoltar" type="Button" parent="VBoxContainer"]
layout_mode = 2
